--- a/aula_dois/curso_dart/pubspec.yaml
+++ b/aula_dois/curso_dart/pubspec.yaml
@@ -4,10 +4,10 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.1.3
+  sdk: '>=2.7.0 <3.1.3'
 
 # Add regular dependencies here.
-dependencies:
+#dependencies:
   # path: ^1.8.0
 
 dev_dependencies:
